--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
     "expensive"
   ],
   "author": "Maciej Krüger <mkg20001@gmail.com>",
-  "license": "MPL-2.0"
+  "license": "MPL-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mkg20001/itz-caching-time.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mkg20001/itz-caching-time/issues"
+  },
+  "homepage": "https://github.com/mkg20001/itz-caching-time#readme"
 }
