--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "itz-caching-time",
   "version": "0.0.1",
   "description": "Cache your expensive code",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -A test"
   },
   "keywords": [
     "caching",
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/mkg20001/itz-caching-time/issues"
   },
-  "homepage": "https://github.com/mkg20001/itz-caching-time#readme"
+  "homepage": "https://github.com/mkg20001/itz-caching-time#readme",
+  "devDependencies": {
+    "mocha": "^6.2.1"
+  }
 }
