feat: use itz-locking-time

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/mkg20001/itz-caching-time#readme",
   "devDependencies": {
-    "mocha": "^6.2.1"
+    "mocha": "^6.2.2"
+  },
+  "dependencies": {
+    "itz-locking-time": "^0.1.1"
   }
 }
